basic header and navigation links

--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -1,2 +1,10 @@
 <template name="Header">
+    <div class="container">
+        <header>
+            <h1>Site Title</h1>
+
+            {{> PageNavigationLinks }}
+        </header>
+    </div>
 </template>
+
