basic add/edit link infrastructure

--- a/client/views/layout/navigation/navigation.html
+++ b/client/views/layout/navigation/navigation.html
@@ -3,8 +3,9 @@
     <ul class="navbar-main">
         {{#each getPageList}}
             <li>
-                <a href="{{getUrl}}">{{this.title}}</a>
+                <a href="{{getUrl}}">{{this.title}}</a> {{> getLinkEdit}}
             </li>
         {{/each}}
+            <li>{{> getLinkAdd }}</li>
     </ul>
 </template>
