--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -1,7 +1,7 @@
 <template name="Header">
     <div class="container">
         <header>
-            <h1>Site Title</h1>
+            <h1>{{> getLinkEdit}} Site Title</h1>
 
             {{> PageNavigationLinks }}
         </header>
