successfully adding pages in navbar

--- a/client/views/layout/navigation/navigation.html
+++ b/client/views/layout/navigation/navigation.html
@@ -6,6 +6,6 @@
                 <a href="{{getUrl}}">{{this.title}}</a> {{> getLinkEdit}}
             </li>
         {{/each}}
-            <li>{{> getLinkAdd }}</li>
+            <li>{{> getLinkAdd callback=showFormForNewPage }}</li>
     </ul>
 </template>
