--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -1,2 +1,4 @@
 @import 'variables.import.less';
 @import 'main.import.less';
+@import '../views/layout/header/header.import.less';
+@import '../views/links/links.import.less';
