--- a/client/views/post-types/main-heading/main-heading.html
+++ b/client/views/post-types/main-heading/main-heading.html
@@ -1,3 +1,3 @@
 <template name="PostMainHeading">
-    <h2>{{this.content}}</h2> {{> getLinkEdit }}
+    <h2>{{this.content}}</h2> {{> getLinkEdit callback=showFormForEditPost doc=this }}
 </template>
