--- a/client/views/links/links.html
+++ b/client/views/links/links.html
@@ -5,3 +5,7 @@
 <template name="getLinkEdit">
     <icon class="icon-link fa fa-pencil" title="{{#if this.title}}{{this.title}}{{else}}edit{{/if}}">{{#if this.text}}{{this.text}}{{/if}}</icon>
 </template>
+
+<template name="getLinkRemove">
+    <icon class="icon-link fa fa-trash" title="{{#if this.title}}{{this.title}}{{else}}remove{{/if}}">{{#if this.text}}{{this.text}}{{/if}}</icon>
+</template>
