--- a/client/views/forms/pages.html
+++ b/client/views/forms/pages.html
@@ -8,10 +8,9 @@
         <button type="submit" class="btn btn-primary">Save</button>
 	{{/autoForm}}
 
-	{{#if this.page}}
+	{{#if this.page}}{{#with doc}}
 	{{> getLinkRemove text="Remove Page" callback=showConfirmationRemovePage }}
+	{{/with}}
 	{{/if}}
-
-
 </template>
 
