admin route with sign in. form to edit site title

--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -1,7 +1,7 @@
 <template name="Header">
     <div class="container">
         <header>
-            <h1>Site Title {{> getLinkEdit}} </h1>
+            <h1>Site Title {{> getLinkEdit callback=showFormForEditSiteTitle }} </h1>
 
             {{> PageNavigationLinks }}
         </header>
