--- a/client/views/post-types/image/post-image.html
+++ b/client/views/post-types/image/post-image.html
@@ -1,3 +1,3 @@
 <template name="PostImage">
-    <img src="{{this.imgSrc}}" alt="{{this.content}}">
+    <img src="{{this.imgSrc}}" alt="{{this.content}}"> {{> getLinkEdit callback=showFormForEditPost doc=this }}
 </template>
