--- a/client/views/post-types/secondary-heading/secondary-heading.html
+++ b/client/views/post-types/secondary-heading/secondary-heading.html
@@ -1,3 +1,3 @@
 <template name="PostSecondaryHeading">
-    <h3>{{this.content}}</h3> {{> getLinkEdit }}
+    <h3>{{this.content}}</h3> {{> getLinkEdit callback=showFormForEditPost doc=this }}
 </template>
