--- a/client/views/post-types/text/post-text.html
+++ b/client/views/post-types/text/post-text.html
@@ -1,3 +1,3 @@
 <template name="PostContent">
-    <p>{{this.content}}</p> {{> getLinkEdit }}
+    <p>{{this.content}}</p> {{> getLinkEdit callback=showFormForEditPost doc=this }}
 </template>
